combined faq and skills

--- a/index.html
+++ b/index.html
@@ -56,16 +56,28 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#faq">FAQ</a>
+                        <a class="page-scroll" href="#about">About</a>
                     </li>
-                    <li>
+             <!--       <li>
                         <a class="page-scroll" href="#skills">Skills</a>
+                    </li> -->
+                    <li>
+                        <a class="page-scroll" href="#rules">Rules &amp; Prizes</a>
+                    </li> 
+                    <li>
+                        <a class="page-scroll" href="#register">Register</a>
+                    </li>
+                  <!--  <li>
+                        <a class="page-scroll" href="#schedule">Schedule</a>
+                    </li> -->
+                    <li>
+                        <a class="page-scroll" href="#sponsors">Sponsors</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#organizers">Organizers</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#register">Register</a>
+                        <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -80,17 +92,18 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Hack City</div>
                 <div class="intro-heading">X/XX/XX - X/XX/XX</div>
-                <a href="#faq" class="page-scroll btn btn-xl">Learn More</a>
+                <a href="#about" class="page-scroll btn btn-xl">Learn More</a>
+                <a href="#register" class="page-scroll btn btn-xl">Register</a>
             </div>
         </div>
     </header>
 
     <!-- About Section -->
-    <section id="faq">
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Frequently Asked Questions</h2>
+                    <h2 class="section-heading">About Hack City</h2>
                     <h3 class="section-subheading text-muted">General information regarding Hack City.</h3>
                 </div>
             </div>
@@ -120,12 +133,49 @@
                     <h4 class="service-heading">Where?</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
+
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Who should attend?</h2>
+                    <h3 class="section-subheading text-muted">Anyone and everyone! Hackathons encourage diversity of majors. Don't be shy!</h3>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-paint-brush fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Designers</h4>
+                    <p class="text-muted">Bring your art and design skills to the table. Build creative, appealing 
+                    and intuitive interfaces and logos! No product is complete without a breathtaking frontend
+                    design. </p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Engineers</h4>
+                    <p class="text-muted"> Whether you are a hardware or software hacker, this is the place for you. Bring to life your creations with a blend of skills. </p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-pencil-square-o fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Business</h4>
+                    <p class="text-muted">What good is a product without a good marketing strategy? Use your skills to craft product pitches and convince the audience that this is the product for them. </p>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Skills Section -->
-    <section id="skills" class="bg-light-gray">
+   <!-- <section id="skills" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -161,6 +211,31 @@
                     <p class="text-muted">What good is a product without a good marketing strategy? Use your skills to craft product pitches and convince the audience that this is the product for them. </p>
                 </div>
             </div>
+        </div>
+    </section> -->
+    <!-- Rules & Prizes Section -->
+    <section id="#rules">
+        <div class="container">
+            <dic class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Rules &amp; Prizes</h2>
+
+                </div>
+            </div>
+        </div>    
+    </section>
+
+    <!-- Schedule Section -->
+    <section id="#schedule">
+        <div class="container">
+
+        </div>
+    </section>
+
+    <!-- Sponsors Section-->
+    <section id="#sponsors">
+        <div class="container">
+
         </div>
     </section>
 
@@ -270,7 +345,7 @@
             </div>
         </div>
     </aside>
-
+    <!-- Registration Section-->
     <section id="register" class="bg-light-gray">
         <div class="container">
             <div class="row">
@@ -283,6 +358,13 @@
             <div class="row text-center">
                 <iframe src="https://docs.google.com/forms/d/1nRrgzhqtSunj8-_moquaQz4u1MT4lO5wIb2axu20pm8/viewform?embedded=true" width="760" height="2000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
             </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="#contact">
+        <div class="container">
+
         </div>
     </section>
 
