added new sections

--- a/index.html
+++ b/index.html
@@ -58,9 +58,6 @@
                     <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
-             <!--       <li>
-                        <a class="page-scroll" href="#skills">Skills</a>
-                    </li> -->
                     <li>
                         <a class="page-scroll" href="#rules">Rules &amp; Prizes</a>
                     </li> 
@@ -174,67 +171,28 @@
         </div>
     </section>
 
-    <!-- Skills Section -->
-   <!-- <section id="skills" class="bg-light-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Who should attend?</h2>
-                    <h3 class="section-subheading text-muted">Hackathons encourage diversity of majors. Don't be shy!</h3>
-                </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-paint-brush fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Designers</h4>
-                    <p class="text-muted">Bring your art and design skills to the table. Build creative, appealing 
-                    and intuitive interfaces and logos! No product is complete without a breathtaking frontend
-                    design. </p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Engineers</h4>
-                    <p class="text-muted"> Whether you are a hardware or software hacker, this is the place for you. Bring to life your creations with a blend of skills. </p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-pencil-square-o fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Business</h4>
-                    <p class="text-muted">What good is a product without a good marketing strategy? Use your skills to craft product pitches and convince the audience that this is the product for them. </p>
-                </div>
-            </div>
-        </div>
-    </section> -->
     <!-- Rules & Prizes Section -->
     <section id="#rules">
         <div class="container">
             <dic class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Rules &amp; Prizes</h2>
-
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
             </div>
         </div>    
     </section>
 
-    <!-- Schedule Section -->
-    <section id="#schedule">
-        <div class="container">
-
-        </div>
-    </section>
-
     <!-- Sponsors Section-->
     <section id="#sponsors">
         <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Sponsors</h2>
+                    <h3 class="section-subheading text-muted">The special people and organizations that keep us running!</h3>
+                     <a href="#sponsors" class="page-scroll btn btn-xl text-center">Sponsor Us</a>
+                </div>
+            </div>
 
         </div>
     </section>
