--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a class="page-scroll" href="#rules">Rules &amp; Prizes</a>
                     </li> 
                     <li>
-                        <a class="page-scroll" href="#register">Register</a>
+                        <a class="page-scroll" href="https://docs.google.com/forms/d/1nRrgzhqtSunj8-_moquaQz4u1MT4lO5wIb2axu20pm8/viewform?embedded=true">Register</a>
                     </li>
                   <!--  <li>
                         <a class="page-scroll" href="#schedule">Schedule</a>
@@ -90,13 +90,13 @@
                 <div class="intro-lead-in">Hack City</div>
                 <div class="intro-heading">X/XX/XX - X/XX/XX</div>
                 <a href="#about" class="page-scroll btn btn-xl">Learn More</a>
-                <a href="#register" class="page-scroll btn btn-xl">Register</a>
+                <a href="https://docs.google.com/forms/d/1nRrgzhqtSunj8-_moquaQz4u1MT4lO5wIb2axu20pm8/viewform?embedded=true" class="page-scroll btn btn-xl">Register</a>
             </div>
         </div>
     </header>
 
     <!-- About Section -->
-    <section id="about">
+    <section id="about" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -133,6 +133,7 @@
 
             </div>
         </div>
+        <br><br><br>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -172,7 +173,7 @@
     </section>
 
     <!-- Rules & Prizes Section -->
-    <section id="#rules">
+    <section id="rules" class="bg-darkest-gray">
         <div class="container">
             <dic class="row">
                 <div class="col-lg-12 text-center">
@@ -184,13 +185,13 @@
     </section>
 
     <!-- Sponsors Section-->
-    <section id="#sponsors">
+    <section id="sponsors" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Sponsors</h2>
-                    <h3 class="section-subheading text-muted">The special people and organizations that keep us running!</h3>
-                     <a href="#sponsors" class="page-scroll btn btn-xl text-center">Sponsor Us</a>
+                    <h3 class="section-subheading text-muted">The special people and organizations that keep us running! If you are interested you could sponsor us!</h3>
+                     <a href="#contact" class="page-scroll btn btn-xl text-center">Sponsor Us</a>
                 </div>
             </div>
 
@@ -198,7 +199,7 @@
     </section>
 
     <!-- Organizers Section -->
-    <section id="organizers">
+    <section id="organizers" class="bg-darkest-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -277,7 +278,7 @@
     </section>
 
     <!-- Clients Aside -->
-    <aside class="clients">
+  <!--  <aside class="clients">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
@@ -302,25 +303,10 @@
                 </div>
             </div>
         </div>
-    </aside>
-    <!-- Registration Section-->
-    <section id="register" class="bg-light-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Register</h2>
-                    <h3 class="section-subheading text-muted">Fill out this form to be part of 
-                        this amazing experience!</h3>
-                </div>
-            </div>
-            <div class="row text-center">
-                <iframe src="https://docs.google.com/forms/d/1nRrgzhqtSunj8-_moquaQz4u1MT4lO5wIb2axu20pm8/viewform?embedded=true" width="760" height="2000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-            </div>
-        </div>
-    </section>
+    </aside> -->
 
     <!-- Contact Section -->
-    <section id="#contact">
+    <section id="contact" class="bg-light-gray">
         <div class="container">
 
         </div>
