--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Hack City</title>
+    <title>hackCity</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Hack City</a>
+                <a class="navbar-brand page-scroll" href="#page-top">hackCity</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -61,9 +61,6 @@
                     <li>
                         <a class="page-scroll" href="#rules">Rules &amp; Prizes</a>
                     </li> 
-                    <li>
-                        <a class="page-scroll" href="https://docs.google.com/forms/d/1nRrgzhqtSunj8-_moquaQz4u1MT4lO5wIb2axu20pm8/viewform?embedded=true">Register</a>
-                    </li>
                   <!--  <li>
                         <a class="page-scroll" href="#schedule">Schedule</a>
                     </li> -->
@@ -76,6 +73,9 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="https://docs.google.com/forms/d/1nRrgzhqtSunj8-_moquaQz4u1MT4lO5wIb2axu20pm8/viewform?embedded=true">Register</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -87,7 +87,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Hack City</div>
+                <div class="intro-lead-in">hackCity</div>
                 <div class="intro-heading">X/XX/XX - X/XX/XX</div>
                 <a href="#about" class="page-scroll btn btn-xl">Learn More</a>
                 <a href="https://docs.google.com/forms/d/1nRrgzhqtSunj8-_moquaQz4u1MT4lO5wIb2axu20pm8/viewform?embedded=true" class="page-scroll btn btn-xl">Register</a>
@@ -100,8 +100,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About Hack City</h2>
-                    <h3 class="section-subheading text-muted">General information regarding Hack City.</h3>
+                    <h2 class="section-heading">About hackCity</h2>
+                    <h3 class="section-subheading text-muted">General information regarding hackCity.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -173,7 +173,10 @@
     </section>
 
     <!-- Rules & Prizes Section -->
-    <section id="rules" class="bg-darkest-gray">
+    <section id="rules" class="bg-photo">
+        <style>
+
+        </style>
         <div class="container">
             <dic class="row">
                 <div class="col-lg-12 text-center">
@@ -199,7 +202,7 @@
     </section>
 
     <!-- Organizers Section -->
-    <section id="organizers" class="bg-darkest-gray">
+    <section id="organizers" class="bg-photo">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -308,7 +311,12 @@
     <!-- Contact Section -->
     <section id="contact" class="bg-light-gray">
         <div class="container">
-
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Contact</h2>
+                    <h3 class="section-subheading text-muted">Let us know if you have questions, concerns or would like to sponsor our hackathon!</h3>
+                </div>
+            </div>
         </div>
     </section>
 
