Made Registration open in a new tab

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="https://docs.google.com/forms/d/1nRrgzhqtSunj8-_moquaQz4u1MT4lO5wIb2axu20pm8/viewform?embedded=true">Register</a>
+                        <a class="page-scroll" href="https://docs.google.com/forms/d/1nRrgzhqtSunj8-_moquaQz4u1MT4lO5wIb2axu20pm8/viewform?embedded=true" target="_blank">Register</a>
                     </li>
                 </ul>
             </div>
