--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Your Website 2014</span>
+                    <span class="copyright">Copyright &copy; hackCity 2014</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
