--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="bg-photo">
+    <section id="about" class="bg-light-photo">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -184,7 +184,7 @@
         </div>    
     </section>
     <!-- Schedule Section -->
-    <section id="schedule" class="bg-photo">
+    <section id="schedule" class="bg-light-photo">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -210,7 +210,7 @@
     </section>
 
     <!-- Organizers Section -->
-    <section id="organizers" class="bg-photo">
+    <section id="organizers" class="bg-light-photo">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
