--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     </section>
 
     <!-- Rules & Prizes Section -->
-    <section id="rules" class="bg-photo">
+    <section id="rules" class="bg-dark-photo">
         <div class="container">
             <dic class="row">
                 <div class="col-lg-12 text-center">
@@ -196,7 +196,7 @@
     </section>
 
     <!-- Sponsors Section-->
-    <section id="sponsors" class="bg-photo">
+    <section id="sponsors" class="bg-dark-photo">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
