Added github link and removed register button

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="intro-lead-in">hackCity</div>
                 <div class="intro-heading">X/XX/XX - X/XX/XX</div>
                 <a href="#about" class="page-scroll btn btn-xl">Learn More</a>
-                <a href="https://docs.google.com/forms/d/1nRrgzhqtSunj8-_moquaQz4u1MT4lO5wIb2axu20pm8/viewform?embedded=true" target="Register"class="page-scroll btn btn-xl">Register</a>
+               <!-- <a href="https://docs.google.com/forms/d/1nRrgzhqtSunj8-_moquaQz4u1MT4lO5wIb2axu20pm8/viewform?embedded=true" target="Register"class="page-scroll btn btn-xl">Register</a> -->
             </div>
         </div>
     </header>
@@ -270,7 +270,7 @@
                         <h4>Lisa Maldonado</h4>
                         <p class="text-muted">Computer Engineering student with a passion for game development and all things technology related.</p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="https://github.com/venegu" target="githubl"><i class="fa fa-github"></i></a>
+                            <li><a href="https://github.com/venegu" target="github2"><i class="fa fa-github"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-paper-plane-o"></i></a>
                             </li>
@@ -328,7 +328,7 @@
         </div>
     </section> -->
 
-    <footer class="bg-photo">
+    <footer class="bg-light-photo">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -336,7 +336,7 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <li><a href="https://github.com/hackcitynyc" target="github3"><i class="fa fa-github"></i></a>
                         </li>
                         <li><a href="#"><i class="fa fa-facebook"></i></a>
                         </li>
