--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                     <li>
                         <a class="page-scroll" href="#organizers">Organizers</a>
                     </li>
-                   <!-- <li>
+                    <li>
                         <a class="page-scroll" href="#contact">Contact</a> 
-                    </li> -->
+                    </li>
                     <li>
                         <a class="page-scroll" href="https://docs.google.com/forms/d/1nRrgzhqtSunj8-_moquaQz4u1MT4lO5wIb2axu20pm8/viewform?embedded=true" target="Register">Register</a>
                     </li>
@@ -88,7 +88,9 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">hackCity</div>
-                <div class="intro-heading">X/XX/XX - X/XX/XX</div>
+                <div class="intro-heading">April 11th - April 12th</div>
+                <!--<h2 class="section-heading">Time: 9 AM - 3 PM</h2> 
+                <br> -->
                 <a href="#about" class="page-scroll btn btn-xl">Learn More</a>
                <!-- <a href="https://docs.google.com/forms/d/1nRrgzhqtSunj8-_moquaQz4u1MT4lO5wIb2axu20pm8/viewform?embedded=true" target="Register"class="page-scroll btn btn-xl">Register</a> -->
             </div>
@@ -317,7 +319,7 @@
     </aside> -->
 
     <!-- Contact Section -->
-   <!-- <section id="contact" class="bg-light-gray">
+   <section id="contact" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -326,7 +328,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <footer class="bg-light-photo">
         <div class="container">
