--- a/index.html
+++ b/index.html
@@ -58,21 +58,24 @@
                     <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#rules">Rules &amp; Prizes</a>
-                    </li> 
+                   <!-- <li>
+                        <a class="page-scroll" href="#prizes">Prizes</a>
+                    </li> -->
                     <li>
                         <a class="page-scroll" href="#schedule">Schedule</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#sponsors">Sponsors</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#organizers">Organizers</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#sponsors">Sponsors</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#contact">Contact</a> 
                     </li>
+                    <!--<li>
+                        <a href="http://static.mlh.io/docs/mlh-code-of-conduct.pdf" target="Rules">Rules</a> 
+                    </li> -->
                     <li>
                         <a class="page-scroll" href="https://docs.google.com/forms/d/1nRrgzhqtSunj8-_moquaQz4u1MT4lO5wIb2axu20pm8/viewform?embedded=true" target="Register">Register</a>
                     </li>
@@ -88,7 +91,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">hackCity</div>
-                <div class="intro-heading">April 11th - April 12th</div>
+                <div class="intro-heading">April 11th - April 12th, 2015</div>
                 <!--<h2 class="section-heading">Time: 9 AM - 3 PM</h2> 
                 <br> -->
                 <a href="#about" class="page-scroll btn btn-xl">Learn More</a>
@@ -174,42 +177,29 @@
         </div>
     </section>
 
-    <!-- Rules & Prizes Section -->
-    <section id="rules" class="bg-dark-photo">
+    <!-- Schedule Section -->
+    <section id="schedule" class="bg-dark-photo">
         <div class="container">
             <dic class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Rules &amp; Prizes</h2>
+                    <h2 class="section-heading">Schedule</h2>
                     <h3 class="section-subheading text-muted">TBA</h3>
+                    <a href="http://static.mlh.io/docs/mlh-code-of-conduct.pdf" target="Rules" class="page-scroll btn btn-xl text center">Rules</a>
                 </div>
             </div>
         </div>    
     </section>
-    <!-- Schedule Section -->
-    <section id="schedule" class="bg-light-photo">
+    <!-- Prize Section -->
+   <!-- <section id="prize" class="bg-light-photo">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Schedule</h2>
+                    <h2 class="section-heading">Prizes</h2>
                     <h3 class="section-subheading text-muted">TBA</h3>
                 </div> 
             </div>
         </div>
-    </section>
-
-    <!-- Sponsors Section-->
-    <section id="sponsors" class="bg-dark-photo">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Sponsors</h2>
-                    <h3 class="section-subheading text-muted">The special people and organizations that keep us running! If you are interested you could sponsor us!</h3>
-                     <a href="#contact" class="page-scroll btn btn-xl text-center">Sponsor Us</a>
-                </div>
-            </div>
-
-        </div>
-    </section>
+    </section> -->
 
     <!-- Organizers Section -->
     <section id="organizers" class="bg-light-photo">
@@ -220,6 +210,8 @@
                     <h3 class="section-subheading text-muted">A little about those who brought this hackathon and website to life. </h3>
                 </div>
             </div>
+
+            <!-- Row 1 --> 
             <div class="row">
                 <div class="col-sm-3">
                     <div class="team-member">
@@ -236,6 +228,56 @@
                         </ul>
                     </div>
                 </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/question.jpg" class="img-responsive img-circle" alt="">
+                        <h4>????</h4>
+                        <p class="text-muted">Lead Marketer</p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/question.jpg" class="img-responsive img-circle" alt="">
+                        <h4>????</h4>
+                        <p class="text-muted">Lead Marketer</p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/question.jpg" class="img-responsive img-circle" alt="">
+                        <h4>????</h4>
+                        <p class="text-muted">Lead Marketer</p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <br> 
+            <!-- Row 2 --> 
+            <div class="row">
                 <div class="col-sm-3">
                     <div class="team-member">
                         <img src="img/team/question.jpg" class="img-responsive img-circle" alt="">
@@ -281,12 +323,106 @@
                         </ul>
                     </div>
                 </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/question.jpg" class="img-responsive img-circle" alt="">
+                        <h4>????</h4>
+                        <p class="text-muted">Lead Marketer</p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
+
+            <br> 
+            <!-- Row 3 -->
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/question.jpg" class="img-responsive img-circle" alt="">
+                        <h4>????</h4>
+                        <p class="text-muted">Lead Marketer</p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/question.jpg" class="img-responsive img-circle" alt="">
+                        <h4>????</h4>
+                        <p class="text-muted">Lead Marketer</p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/question.jpg" class="img-responsive img-circle" alt="">
+                        <h4>????</h4>
+                        <p class="text-muted">Lead Marketer</p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/question.jpg" class="img-responsive img-circle" alt="">
+                        <h4>????</h4>
+                        <p class="text-muted">Lead Marketer</p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
                 </div>
             </div>
+            </div>                            
+        </div>
+    </section>
+
+    <!-- Sponsors Section-->
+    <section id="sponsors" class="bg-dark-photo">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Sponsors</h2>
+                    <h3 class="section-subheading text-muted">The special people and organizations that keep us running! If you are interested you could sponsor us!</h3>
+                     <a href="#contact" class="page-scroll btn btn-xl text-center">Sponsor Us</a>
+                </div>
+            </div>
+
         </div>
     </section>
 
@@ -319,7 +455,7 @@
     </aside> -->
 
     <!-- Contact Section -->
-   <section id="contact" class="bg-light-gray">
+   <section id="contact" class="bg-light-photo">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
