Changed date and update About section

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">hackCity</div>
-                <div class="intro-heading">April 11th - April 12th, 2015</div>
+                <div class="intro-heading">04/11/14 - 04/12/14</div>
                 <!--<h2 class="section-heading">Time: 9 AM - 3 PM</h2> 
                 <br> -->
                 <a href="#about" class="page-scroll btn btn-xl">Learn More</a>
@@ -133,7 +133,7 @@
                         <i class="fa fa-location-arrow fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Where?</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">This hackathon will be held at The City College of New from Saturday, April 11th at 9 A.M. to Sunday, April 12th at 3 P.M.</p>
                 </div>
 
             </div>
