Added logo on the cover photo

--- a/index.html
+++ b/index.html
@@ -89,11 +89,10 @@
     <!-- Header -->
     <header>
         <div class="container">
+            <img class="logo-photo" src="img/l1.png">
             <div class="intro-text">
-                <div class="intro-lead-in">hackCity</div>
+               <!-- <div class="intro-lead-in">hackCity</div> --> 
                 <div class="intro-heading">04/11/14 - 04/12/14</div>
-                <!--<h2 class="section-heading">Time: 9 AM - 3 PM</h2> 
-                <br> -->
                 <a href="#about" class="page-scroll btn btn-xl">Learn More</a>
                <!-- <a href="https://docs.google.com/forms/d/1nRrgzhqtSunj8-_moquaQz4u1MT4lO5wIb2axu20pm8/viewform?embedded=true" target="Register"class="page-scroll btn btn-xl">Register</a> -->
             </div>
