--- a/index.html
+++ b/index.html
@@ -460,6 +460,8 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact</h2>
                     <h3 class="section-subheading text-muted">Let us know if you have questions, concerns or would like to sponsor our hackathon!</h3>
+                    <h4 class="section-body">If you have any questions, feel free to email support@hackcity.nyc. You will be reaching Amal Afroz Alam or Joshua Luchan, Chief Organizer and Director of Experience.</h4>
+                    <h4 class="section-body">If you would like to sponsor us, please contact us at sponsor@hackcity.nyc.</h4>
                 </div>
             </div>
         </div>
