--- a/index.html
+++ b/index.html
@@ -460,8 +460,8 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact</h2>
                     <h3 class="section-subheading text-muted">Let us know if you have questions, concerns or would like to sponsor our hackathon!</h3>
-                    <h4 class="section-body">If you have any questions, feel free to email <a href="mailto:email@support@hackcity.nyc">support@hackcity.nyc</a>.</h4>
-                    <h4 class="section-body">If you would like to sponsor us, please contact us at <a href="mailto:email@sponsors@hackcity.nyc">sponsors@hackcity.nyc</a>.</h4>
+                    <h3 class="section-subheading text-muted">If you have any questions, feel free to email <a href="mailto:email@support@hackcity.nyc">support@hackcity.nyc</a>.</h3>
+                    <h3 class="section-subheading text-muted">If you would like to sponsor us, please contact us at <a href="mailto:email@sponsors@hackcity.nyc">sponsors@hackcity.nyc</a>.</h3>
                 </div>
             </div>
         </div>
