Added another organizer

--- a/index.html
+++ b/index.html
@@ -279,15 +279,16 @@
             <div class="row">
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="img/team/question.jpg" class="img-responsive img-circle" alt="">
-                        <h4>????</h4>
-                        <p class="text-muted">Lead Marketer</p>
+                        <img src="img/team/MZaryab.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Mohammad Zaryab</h4>
+                        <p class="text-muted">Electrical Engineering student with a strong interest in graphics design.</p>
+                        <br>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            <li><a href="mailto:email@mohammad.zaryab@macaulay.cuny.edu"><i class="fa fa-paper-plane-o"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="https://www.linkedin.com/in/mzaryab"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -315,7 +316,7 @@
                         <ul class="list-inline social-buttons">
                             <li><a href="https://github.com/venegu" target="github2"><i class="fa fa-github"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-paper-plane-o"></i></a>
+                            <li><a href="mailto:email@lisa.maldonado@macaulay.cuny.edu"><i class="fa fa-paper-plane-o"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
