Updating CSS, removing icons

--- a/index.html
+++ b/index.html
@@ -104,28 +104,28 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="about-grids">
                         <div class="col-md-3">
                             <div class="about-grid text-center">
-                                <span class="about-icon1"> </span>
+                                <span><i class="fa fa-github fa-5x"></i></span>
                                 <h3>CLIENTS<br /><label> </label></h3>
                                 <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</p>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="about-grid text-center">
-                                <span class="about-icon2"> </span>
+                                <span><i class="fa fa-github fa-5x"></i></span>
                                 <h3>branding<br /><label> </label></h3>
                                 <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</p>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="about-grid text-center">
-                                <span class="about-icon3"> </span>
+                                <span><i class="fa fa-github fa-5x"></i></span>
                                 <h3>marketing<br /><label> </label></h3>
                                 <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</p>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="about-grid text-center">
-                                <span class="about-icon4"> </span>
+                                <span><i class="fa fa-github fa-5x"></i></span>
                                 <h3>adv.<br /><label> </label></h3>
                                 <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</p>
                             </div>
