--- a/index.html
+++ b/index.html
@@ -296,11 +296,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-github"></i></a>
+                        <li><a href="https://github.com/DrkSephy"><i class="fa fa-github"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-bitbucket"></i></a>
+                        <li><a href="https://bitbucket.org/DrkSephy"><i class="fa fa-bitbucket"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="www.linkedin.com/in/drksephy"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
