Updating Fire Emblem project description

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         </div>
                         <div class="col-md-6 advertising-right text-right">
                             <h4>Fire Emblem: Chronicles of the Abyss<label> </label></h4>
-                            <p>A new game development project as part of the CCNY ACM's Game Development Club. The motivation of this project is to create a JavaScript remake of Fire Emblem - Blazing Sword, which is playable using only the browser and the mouse, as well as to push the boundaries and limitations of the ImpactJS Game Engine.</p>
+                            <p>A faithful recreation of Fire Emblem - The Blazing Sword built using the ImpactJS game engine. Features customized Artificial Intelligence including A* pathfinding, deep weapon and inventory systems, player interactions (trade and assist), expansive shop system, extravagant animation systems, and a handful of new and exciting maps and chapter objectives. Includes extensions to the game engine itself with an expansive inventory and GUI system, as well as extensions to the default sound classes. Completely playable with the mouse to enhance user experience. </p>
                             <a class="wedobtn" href="#">More details</a>
                         </div>
                         <div class="clearfix"> </div>
