--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
                             <p>Since then, I've been deeply invested in all things web-related. I began creating web applications and services using all the hottest frameworks that I could get my hands on: Flask, Django, Node.js, Express.js, Angular.js, Ember.js, D3.js, and recently React.js.</p>
 
-                            <p>In my spare time, I enjoy writing, playing the occasional video game but mostly <a style="color: #FC645F" href="https://github.com/chessmasterhong/WaterEmblem/pulls?q=is%3Apr+is%3Aclosed+author%3ADrkSephy"> building them.</a> I am a huge <a style="color: #FC645F" href="https://github.com/DrkSephy">advocate of open-source development </a> and a firm believer in John Resig's <a style="color: #FC645F" href="http://ejohn.org/blog/write-code-every-day/">write code every day</a>. While commit streaks do not equate to the skill of a developer, they help keep my skills sharp while I work on the every day projects that I love. 
+                            <p>In my spare time, I enjoy writing, reading and playing the occasional video game but mostly <a style="color: #FC645F" href="https://github.com/chessmasterhong/WaterEmblem/pulls?q=is%3Apr+is%3Aclosed+author%3ADrkSephy"> building them.</a> I am a huge <a style="color: #FC645F" href="https://github.com/DrkSephy">advocate of open-source development </a> and a firm believer in John Resig's <a style="color: #FC645F" href="http://ejohn.org/blog/write-code-every-day/">write code every day</a>. While commit streaks do not equate to the skill of a developer, they help keep my skills sharp while I work on the every day projects that I love. 
                     </div>
                 </div>
             </div>
