--- a/index.html
+++ b/index.html
@@ -293,11 +293,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
             <div class="clearfix"> </div>
 
-            <div class="footer text-center">
+            <!--
+            <div class="footer text-center marketing">
                 <div class="col-md-4">
                     
                 </div>
-                <div class="col-md-4">
+                <div class=" col-md-4">
                     <ul class="list-inline social-buttons">
                         <li><a href="https://github.com/DrkSephy"><i class="fa fa-github"></i></a>
                         </li>
@@ -310,6 +311,34 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-md-4">
                     
                 </div>
+            </div>
+            -->
+            <footer class="text-center">
+            <div class="footer-above">
+                <div class="container">
+                    <div class="row">
+                        <div class="footer-col col-md-4">
+                        </div>
+                        <div class="footer-col col-md-4">
+                            <div class="portfolio-head text-center">
+                                <h4>Around the Web</h4>
+                            </div>
+                            <br>
+                            <ul class="list-inline social-buttons">
+                                <li><a href="https://github.com/DrkSephy"><i class="fa fa-github"></i></a>
+                                </li>
+                                <li><a href="https://bitbucket.org/DrkSephy"><i class="fa fa-bitbucket"></i></a>
+                                </li>
+                                <li><a href="www.linkedin.com/in/drksephy"><i class="fa fa-linkedin"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="footer-col col-md-4">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
                 <script type="text/javascript">
                                     $(document).ready(function() {
                                         /*
