--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <div class="header-info text-center">
                 <div class="container">
                     <h1><span> </span><label>David Leonard</label> <span> </span></h1>
-                    <p>Full-stack JavaScript Developer</p>
+                    <p style="font-variant: small-caps;">Full-stack JavaScript Developer</p>
                 
                     <a class="down-arrow down-arrow-to scroll" href="#about"><span> </span></a>
                     <!-- Mouse 
@@ -189,8 +189,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
             <div id="port" class="portfolio-box">
                 <div class="container">
-                    <div class="portfolio-head text-center">
-                        <h4>portfolio</h4>
+                    <div class="about-head text-center">
+                        <br>
+                        <h3>Project <span>Portfolio</span></h3>
                     </div>
                     <script type="text/javascript" src="js/jquery.mixitup.min.js"></script>
                     <script type="text/javascript">
